--- a/app/src/main/res/layout/activity_primer_nivel_europa.xml
+++ b/app/src/main/res/layout/activity_primer_nivel_europa.xml
@@ -51,6 +51,7 @@
         app:srcCompat="@drawable/spain" />
 
     <RadioGroup
+        android:id="@+id/radioGroup"
         android:layout_width="120dp"
         android:layout_height="129dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,4 +77,14 @@
             android:layout_height="wrap_content"
             android:text="RadioButton" />
     </RadioGroup>
+
+    <Button
+        android:id="@+id/bt_comprobar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="24dp"
+        android:text="Button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 </androidx.constraintlayout.widget.ConstraintLayout>
