--- a/app/src/main/res/layout/activity_quinto_nivel_desafio_final.xml
+++ b/app/src/main/res/layout/activity_quinto_nivel_desafio_final.xml
@@ -59,19 +59,19 @@
         app:layout_constraintVertical_bias="0.5">
 
         <RadioButton
-            android:id="@+id/radioButton7"
+            android:id="@+id/rb_opcion1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="RadioButton" />
 
         <RadioButton
-            android:id="@+id/radioButton8"
+            android:id="@+id/rb_opcion2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="RadioButton" />
 
         <RadioButton
-            android:id="@+id/radioButton6"
+            android:id="@+id/rb_opcion3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="RadioButton" />
